# frenamer

./: Cargo.toml  README.md
src/: fs_utils.rs  logger.rs  main.rs  rename.rs
